Style: remove borderline on arrow button click(mini carousel)

--- a/shopping_how/public/CSS/main.scss
+++ b/shopping_how/public/CSS/main.scss
@@ -441,6 +441,12 @@ header {
       height: 85px;
       vertical-align: middle;
       background-color: transparent;
+
+      &:focus {
+        //클릭시 생기는 보더 없애기
+        border: none;
+        outline: none;
+      }
     }
   }
 
