--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,7 +87,7 @@
                 <div class="content__main">
                     <div class="content__main__one">
                         <a href="/">
-                            <img src="/images/car_best.png" />
+                            <img/>
                         </a>
                     </div>
 
@@ -97,19 +97,19 @@
                                 class="item"                                
                                 style="transform: translateX(0%); transition: transform 0.4s;"
                             >
-                                <img src="/images/coffee_twig.png" />
+                                <img />
                             </div>
                             <div
                                 class="item"
                                 style="transform: translateX(100%); transition: transform 0.4s;"
                             >
-                                <img src="/images/carousel_test1.jfif" />
+                                <img />
                             </div>
                             <div
                                 class="item"
                                 style="transform: translateX(-100%); transition: transform 0.4s;"
                             >
-                                <img src="/images/carousel_test2.png" />
+                                <img />
                             </div>
                         </div>
 
