--- a/shopping/public/stylesheets/main.scss
+++ b/shopping/public/stylesheets/main.scss
@@ -34,7 +34,8 @@ footer {
   }
 
   .list_item,
-  .list_keyword {
+  .list_keyword,
+  .list_how {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(20%, auto));
     min-height: 350px;
@@ -64,7 +65,8 @@ footer {
   }
 
   .list_hotDeal,
-  .list_keyword {
+  .list_keyword,
+  .list_how {
     li {
       display: flex;
       text-align: center;
