--- a/shopping_how/views/index.ejs
+++ b/shopping_how/views/index.ejs
@@ -89,8 +89,12 @@
       <div class="hot_category__title">
         <h2>지금 뜨는 테마 카테고리<h2>
       </div>
-      <div class="carousel_container">
-
+      <div class="carousel2">
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
       </div>
       <div class="footer"></div>
     </section>
