--- a/shopping_how/public/CSS/style.css
+++ b/shopping_how/public/CSS/style.css
@@ -301,7 +301,7 @@ header {
   align-items: center;
   box-sizing: border-box;
   position: relative;
-  height: 310px;
+  height: 308px;
   background-size: cover; }
   .cell .cell__lowehalf_pic {
     display: inline-block;
@@ -418,11 +418,88 @@ header {
     .hot_category .hot_category__title h2 {
       align-self: flex-end;
       font-size: 0.8rem; }
-  .hot_category .carousel_container {
-    border: 1px solid #dddcdc;
+
+.carousel2 {
+  border: 1px solid #dddcdc;
+  background-color: #fff;
+  height: 310px;
+  margin-bottom: 1rem;
+  display: grid;
+  grid-gap: 1px 1px;
+  grid-template-columns: repeat(5, 1fr);
+  border: 1px solid #dddcdc; }
+  .carousel2 .item {
+    border: 1px solid #f1f1f1;
     background-color: #fff;
-    height: 310px;
-    margin-bottom: 1rem; }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    position: relative;
+    height: 308px;
+    background-size: cover; }
+    .carousel2 .item .item_pic {
+      display: inline-block;
+      border: 0;
+      width: 100%;
+      height: 200px;
+      background-size: cover;
+      aspect-ratio: auto 200 / 200; }
+    .carousel2 .item li {
+      padding: 21px 27px;
+      height: 276px;
+      width: 100%;
+      height: 100%;
+      text-align: left;
+      border-bottom: 0 none;
+      position: relative;
+      line-height: 14px;
+      letter-spacing: -1px;
+      background-size: cover; }
+
+.item_pic {
+  display: inline-block;
+  border: 0;
+  width: 100%;
+  height: 200px;
+  background-size: cover;
+  aspect-ratio: auto 200 / 200; }
+
+.item_name {
+  height: 40px;
+  margin: 11px 0 0;
+  font-size: 13px;
+  line-height: 20px;
+  color: #555;
+  word-break: break-all; }
+
+.item_txt_box {
+  height: 43px;
+  padding-top: 7px;
+  letter-spacing: 0; }
+  .item_txt_box .current-price {
+    float: left;
+    font-size: 14px;
+    line-height: 23px;
+    color: #000;
+    font-weight: 700;
+    font-family: Tahoma, sans-serif; }
+  .item_txt_box .discount-percentage {
+    padding-right: 5px;
+    font-size: 18px;
+    letter-spacing: -1px;
+    line-height: 30px;
+    color: #fc363c;
+    float: right; }
+
+.original-price {
+  display: block;
+  margin-top: -10px;
+  font-size: 13px;
+  color: #888;
+  line-height: 22px;
+  font-family: Tahoma, sans-serif;
+  text-decoration: line-through; }
 
 /*-------------------------------*/
 /*FOOTER*/
