Style: add comment & fix mouse hovering effect

--- a/shopping_how/public/CSS/main.scss
+++ b/shopping_how/public/CSS/main.scss
@@ -516,6 +516,12 @@ header {
   border-bottom: 4px solid #f1f1f1;
   background-color: #dedada;
   cursor: pointer;
+  border: none;
+  outline: none;
+
+  &:hover {
+    background-color: #cccccc;
+  }
 }
 
 /*-------------------------------*/
