--- a/shopping_how/views/index.ejs
+++ b/shopping_how/views/index.ejs
@@ -75,6 +75,7 @@
             </div>
           </div>
         </div>
+        <%#여기서부터 셀박스%>
         <div class="cell cell-bottom"></div>
         <div class="cell cell-bottom"></div>
         <div class="cell cell-bottom"></div>
@@ -89,6 +90,7 @@
       <div class="hot_category__title">
         <h2>지금 뜨는 테마 카테고리<h2>
       </div>
+      <%#여기서부터 빅캐러셀%>
       <div class="carousel2">
         <div class="item"></div>
         <div class="item"></div>
