--- a/shopping_how/public/CSS/style.css
+++ b/shopping_how/public/CSS/style.css
@@ -403,7 +403,11 @@ header {
   border: 2px solid #f1f1f1;
   border-bottom: 4px solid #f1f1f1;
   background-color: #dedada;
-  cursor: pointer; }
+  cursor: pointer;
+  border: none;
+  outline: none; }
+  .btn_more_info:hover {
+    background-color: #cccccc; }
 
 /*-------------------------------*/
 /*HOT CATEGORY SECTION*/
