Fix : 트랜지션 CSS 설정 변경
* 모든 변경에 대해 transtion을 주는 건 성능 차원에서 좋지 않다고 들었음.
* 그래서 transform 에 대해서만 transition을 주도록 변경함.

--- a/shopping/public/stylesheets/main.css
+++ b/shopping/public/stylesheets/main.css
@@ -239,7 +239,7 @@ input {
   height: 100%;
   display: flex;
   width: 300%;
-  transition: all 0.3s;
+  transition: transform 0.3s;
 }
 .slider section {
   flex-basis: 100%;
