--- a/shopping/public/stylesheets/main.scss
+++ b/shopping/public/stylesheets/main.scss
@@ -301,7 +301,7 @@ input {
     height: 100%;
     display: flex;
     width: 300%;
-    transition: all 0.3s;
+    transition: transform 0.3s;
     
 
     section {
