refactor : TopCarouselUI 리팩토링(클래스 내에서 response 이미지 처리하도록 리팩토링), 유틸함수 추가

--- a/public/stylesheets/main-top.scss
+++ b/public/stylesheets/main-top.scss
@@ -5,7 +5,6 @@ $img-text_color: rgb(136, 136, 136);
 
 main {
   width: 1274px;
-  height: 660px;
   margin: 19px 600px;
   background-color: white;
   border: $outline_color 1px solid;
@@ -15,7 +14,7 @@ main {
 }
 .section-top__container {
   display: grid;
-  grid-template-rows: repeat(2, 340px);
+  grid-template-rows: repeat(2, 340px); //여기 이미지 박스 row만큼 늘려줘야함
   grid-template-columns: repeat(5, 1fr);
   grid-auto-rows: 200px;
 }
@@ -113,6 +112,7 @@ main {
       }
     }
   }
+
   #paging-btn-prev {
     position: absolute;
     left: 1168px;
@@ -152,6 +152,7 @@ main {
 
 .view-more {
   height: 80px;
+  margin-top: 120px;
   background-color: bisque;
   text-align: center;
   padding: 30px;
