Fix : 카테고리 섹션 HTML 구조화

--- a/shopping/views/main.ejs
+++ b/shopping/views/main.ejs
@@ -60,59 +60,71 @@
 
     <section class="main">
 
-      <div class = "main_wrapper">
-        <div class = "big_contents">
-            <div class="big_contents_wrapper">
-                <div class = "best">
-                    베스트 이미지
-                </div>
-                <div class="container">
-                    <div class="carousel">
-                      <div class="slider">
-                        <section>content for section 1</section>
-                        <section>content for section 2</section>
-                        <section>content for section 3</section>
-                      </div>
-                      <div class="controls">
-                        <span class="arrow left">
-                          <i class="material-icons">
-                            keyboard_arrow_left
-                          </i>
-                         </span>
-                        <span class="arrow right">
-                          <i class="material-icons">
-                          keyboard_arrow_right
-                          </i>
-                         </span>
-                        <ul>
-                          <li class = "selected"></li>
-                          <li></li>
-                          <li></li>
-                        </ul>
-                      </div>
+        <div class="main_wrapper">
+            <div class="big_contents">
+                <div class="big_contents_wrapper">
+                    <div class="best">
+                        베스트 이미지
                     </div>
-                  </div>
+                    <div class="container">
+                        <div class="carousel">
+                            <div class="slider">
+                                <section>content for section 1</section>
+                                <section>content for section 2</section>
+                                <section>content for section 3</section>
+                            </div>
+                            <div class="controls">
+                                <span class="arrow left">
+                                    <i class="material-icons">
+                                        keyboard_arrow_left
+                                    </i>
+                                </span>
+                                <span class="arrow right">
+                                    <i class="material-icons">
+                                        keyboard_arrow_right
+                                    </i>
+                                </span>
+                                <ul>
+                                    <li class="selected"></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
-         
-           
+
+            <div class="small_contents">
+
+            </div>
+            <button class="show_more">더보기</button>
         </div>
-
-        <div class = "small_contents">
-    
-        </div>
-        <button class = "show_more">더보기</button>
-
-        <div class = "trend_category">
-            <button id = "prev_category"></button>
-            <h2>지금뜨는 테마 카테고리</h2>
-            <ul class = "category_list">
-
-            </ul>
-            <button id = "next_category"></button>
-        </div>
-
-      </div>
     </section>
+
+    <section class="sub_main">
+        <div class="sub_main_wrapper">
+            <div class="category_title">지금뜨는 테마 카테고리</div>
+            <div class="category_container">
+                <div class="category_carousel">
+                    <div class="category_slider">
+                        <section></section>
+                        <section></section>
+                        <section></section>
+                        <section></section>
+                        <section></section>
+                    </div>
+                    <div class="sub_main_controls"></div>
+            </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
     <script src="/javascripts/header.js"></script>
     <script src="/javascripts/best.js"></script>
     <script src="/javascripts/slide.js"></script>
