feat : ViewMore 클래스 추가, 기능은 완료하였으나 css 문제있음(첫 요소 width, grid low)

--- a/views/index.html
+++ b/views/index.html
@@ -61,31 +61,10 @@
               src="http://shop4.daumcdn.net/shophow/sib/0_210219174900_cCDgZtbAhPiBQqcJamsODOWNoVrXILeM"
             />
           </div>
-          <div class="section-top__item" id="items-carousel">
+          <div class="section-top__item" id="items-00">
             <div class="item__carousel-box">
               <!-- 여기서 부터 캐러셀 -->
-              <div class="item__carousel-wrap">
-                <!-- <div class="carousel-content">
-                  <a href="#"" >
-                    <img
-                      src="//shop3.daumcdn.net/shophow/sib/0_210219175737_rZKhKlFtOPfWeMUVyowhqtRvzJJOintZ"
-                  /></a>
-                </div>
-                <div class="carousel-content">
-                  <a href="#">
-                    <img
-                      src="//shop2.daumcdn.net/shophow/sib/0_210219175824_lTVZxKLcBxDipjZVpYbrzginiMwRizAO"
-                    />
-                  </a>
-                </div>
-                <div class="carousel-content">
-                  <a href="#">
-                    <img
-                      src="//shop1.daumcdn.net/shophow/sib/0_210219175816_BLrjXAFKSXpUoiPzkxzQFtLjJkHixbZX"
-                    />
-                  </a>
-                </div>       -->
-              </div>
+              <div class="item__carousel-wrap"></div>
             </div>
 
             <div class="item__carousel-icon">
@@ -218,8 +197,8 @@
               <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
               <span class="img-icon">테마</span>
             </div>
-          </div> -->
-          <!-- <div class="section-top__item">
+          </div>
+          <div class="section-top__item">
             <div class="item__img-box-wrap">
               <img
                 class="img-box"
