feat : view more 기능 추가

--- a/views/index.html
+++ b/views/index.html
@@ -61,7 +61,7 @@
               src="http://shop4.daumcdn.net/shophow/sib/0_210219174900_cCDgZtbAhPiBQqcJamsODOWNoVrXILeM"
             />
           </div>
-          <div class="section-top__item" id="items-00">
+          <div class="section-top__item" id="items-carousel">
             <div class="item__carousel-box">
               <!-- 여기서 부터 캐러셀 -->
               <div class="item__carousel-wrap"></div>
