feat : 더 보기 text 업데이트 기능추가

--- a/views/index.html
+++ b/views/index.html
@@ -63,7 +63,7 @@
           </div>
           <div class="section-top__item" id="items-carousel">
             <div class="item__carousel-box">
-              <!-- 여기서 부터 캐러셀 -->
+              <!-- 캐러셀 section-->
               <div class="item__carousel-wrap"></div>
             </div>
 
@@ -87,131 +87,10 @@
               </button>
             </div>
           </div>
-
-          <!-- <div class="section-top__item">
-            <div class="item__img-box-wrap">
-              <img
-                class="img-box"
-                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FO6937905659.jpg%3Fut%3D20190620152627&amp;scode=talkgift"
-              />
-              <strong class="img-title">라바트 가구 기획전</strong>
-              <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
-              <span class="img-icon">테마</span>
-            </div>
-          </div>
-          <div class="section-top__item">
-            <div class="item__img-box-wrap">
-              <img
-                class="img-box"
-                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FO6937905659.jpg%3Fut%3D20190620152627&amp;scode=talkgift"
-              />
-              <strong class="img-title">라바트 가구 기획전</strong>
-              <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
-              <span class="img-icon">테마</span>
-            </div>
-          </div>
-          <div class="section-top__item">
-            <div class="item__img-box-wrap">
-              <img
-                class="img-box"
-                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FO6937905659.jpg%3Fut%3D20190620152627&amp;scode=talkgift"
-              />
-              <strong class="img-title">라바트 가구 기획전</strong>
-              <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
-              <span class="img-icon">테마</span>
-            </div>
-          </div>
-          <div class="section-top__item">
-            <div class="item__img-box-wrap">
-              <img
-                class="img-box"
-                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FO6937905659.jpg%3Fut%3D20190620152627&amp;scode=talkgift"
-              />
-              <strong class="img-title">라바트 가구 기획전</strong>
-              <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
-              <span class="img-icon">테마</span>
-            </div>
-          </div>
-          <div class="section-top__item">
-            <div class="item__img-box-wrap">
-              <img
-                class="img-box"
-                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FO6937905659.jpg%3Fut%3D20190620152627&amp;scode=talkgift"
-              />
-              <strong class="img-title">라바트 가구 기획전</strong>
-              <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
-              <span class="img-icon">테마</span>
-            </div>
-          </div>
-          <div class="section-top__item">
-            <div class="item__img-box-wrap">
-              <img
-                class="img-box"
-                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FO6937905659.jpg%3Fut%3D20190620152627&amp;scode=talkgift"
-              />
-              <strong class="img-title">라바트 가구 기획전</strong>
-              <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
-              <span class="img-icon">테마</span>
-            </div>
-          </div>
-          <div class="section-top__item">
-            <div class="item__img-box-wrap">
-              <img
-                class="img-box"
-                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FO6937905659.jpg%3Fut%3D20190620152627&amp;scode=talkgift"
-              />
-              <strong class="img-title">라바트 가구 기획전</strong>
-              <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
-              <span class="img-icon">테마</span>
-            </div>
-          </div>
-          <div class="section-top__item">
-            <div class="item__img-box-wrap">
-              <img
-                class="img-box"
-                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FO6937905659.jpg%3Fut%3D20190620152627&amp;scode=talkgift"
-              />
-              <strong class="img-title">라바트 가구 기획전</strong>
-              <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
-              <span class="img-icon">테마</span>
-            </div>
-          </div>
-          <div class="section-top__item">
-            <div class="item__img-box-wrap">
-              <img
-                class="img-box"
-                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FO6937905659.jpg%3Fut%3D20190620152627&amp;scode=talkgift"
-              />
-              <strong class="img-title">라바트 가구 기획전</strong>
-              <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
-              <span class="img-icon">테마</span>
-            </div>
-          </div>
-          <div class="section-top__item">
-            <div class="item__img-box-wrap">
-              <img
-                class="img-box"
-                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FO6937905659.jpg%3Fut%3D20190620152627&amp;scode=talkgift"
-              />
-              <strong class="img-title">라바트 가구 기획전</strong>
-              <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
-              <span class="img-icon">테마</span>
-            </div>
-          </div>
-          <div class="section-top__item">
-            <div class="item__img-box-wrap">
-              <img
-                class="img-box"
-                src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FO6937905659.jpg%3Fut%3D20190620152627&amp;scode=talkgift"
-              />
-              <strong class="img-title">라바트 가구 기획전</strong>
-              <span class="img-text">공간 전체를 아루르는 품격있는 분위기</span>
-              <span class="img-icon">테마</span>
-            </div>
-          </div> -->
+          <!-- 더 보기 section -->
         </div>
         <div class="view-more">
-          <span class="view-more___btn">더 보기(0 / 100 건) </span>
+          <span class="view-more__btn">더 보기(0 / 100 건)</span>
         </div>
       </section>
     </main>
