--- a/shopping/views/main.ejs
+++ b/shopping/views/main.ejs
@@ -106,17 +106,24 @@
 
     <section class="sub_main">
         <div class="sub_main_wrapper">
-            <div class="category_title">지금뜨는 테마 카테고리</div>
-            <div class="category_container">
-                <div class="category_carousel">
-                    <div class="category_slider">
-                        <section></section>
-                        <section></section>
-                        <section></section>
-                        <section></section>
-                        <section></section>
+            <div class="category_title"><span>지금뜨는 테마 카테고리</span></div>
+            <div class="category container">
+                <div class="category carousel">
+                    <div class="category slider">
+   
                     </div>
-                    <div class="sub_main_controls"></div>
+                    <div class="sub_main controls">
+                        <span class="sub_main arrow right">
+                            <i class="material-icons" data-action="moveRight">
+                                keyboard_arrow_right
+                            </i>
+                        </span>
+                        <span class="sub_main arrow left">
+                            <i class="material-icons" data-action="moveLeft">
+                                keyboard_arrow_left
+                            </i>
+                        </span>
+                    </div>
             </div>
             </div>
         </div>
@@ -129,6 +136,7 @@
     <script src="/javascripts/best.js"></script>
     <script src="/javascripts/slide.js"></script>
     <script src="/javascripts/itemList.js"></script>
+    <script src="/javascripts/category.js"></script>
 </body>
 
 </html>
