더보기 버튼의 숫자 텍스트를 위한 span 태그 추가

--- a/views/parts/sectionTop.ejs
+++ b/views/parts/sectionTop.ejs
@@ -28,7 +28,11 @@
       <button>
         <span
           >더보기
-          <span></span>
+          <span>(</span>
+          <span class="show-imgs-count"></span>
+          <span>/</span>
+          <span class="show-imgs-total"></span>
+          <span>건)</span>
           <span><i class="fas fa-angle-down"></i></span>
         </span>
       </button>
