feat : Bottom Carousel UI, scss 추가

--- a/views/index.html
+++ b/views/index.html
@@ -47,7 +47,7 @@
         <ul class="header__nav-menu__user">
           <li><button id="user__login-btn"></button><span>로그인</span></li>
           <li>
-            <button id="user__recently-btn"></button><span>최근본 상품</span>
+            <button id="user__recently-btn"></button><span>최근 본 상품</span>
           </li>
         </ul>
       </nav>
@@ -90,90 +90,183 @@
           <!-- 더 보기 section -->
         </div>
         <div class="view-more">
-          <span class="view-more__btn">더 보기(0 / 100 건)</span>
+          <span class="view-more__btn"></span>
         </div>
       </section>
     </main>
-    <!-- 
-    <section class="carousel">
-      <div class="carousel__title">지금뜨는 테마 카테고리</div>
-      <ul class="carousel_items">
-        <li>깔끔한 감성 가구 #두닷</li>
-        <li>영화관처럼 빵빵한 음질 #사운드바</li>
-        <li>디자인도 예쁜 LED 조명 거울</li>
-        <li>촉촉하고 향기롭게 바디 미스트</li>
-        <li>속건조 완화를 돕는 앰플</li>
-      </ul>
 
-    </section>
-    <section class="partners">
-      <div class="partners__wrap">
-        <span>쇼핑하우 파트너</span>
-        <div class="wrap__list-total">
-          <div class="list-total__sub">
-            <strong class="list-title">오픈마켓</strong>
-            <ul class="list__mall">
-              <li><a href="#">G마켓</a></li>
-              <li><a href="#">옥션</a></li>
-              <li><a href="#">11번가</a></li>
-              <li><a href="#">인터파크</a></li>
-            </ul>
+    <div class="carousel__title">지금뜨는 테마 카테고리</div>
+    <section class="section-bottom">
+      <div class="bottom__carousel_wrap">
+        <div class="bottom__carousel_item">
+          <img
+            class="img-box"
+            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
+            alt=""
+          />
+          <div class="text-wrap">
+            <strong class="img-title">지금은 신품종 전성시대</strong>
+            <span class="img-text">지금은 신품종 전성시대</span>
+            <span class="img-icon"></span>
           </div>
-          <div class="list-total__sub"">
-            <strong class="list-title">백화점</strong>
-            <ul class="list__mall">
-              <li><a href="#">G마켓</a></li>
-              <li><a href="#">옥션</a></li>
-              <li><a href="#">11번가</a></li>
-              <li><a href="#">인터파크</a></li>
-            </ul>
+        </div>
+        <div class="bottom__carousel_item">
+          <img
+            class="img-box"
+            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
+            alt=""
+          />
+          <div class="text-wrap">
+            <strong class="img-title">지금은 신품종 전성시대</strong>
+            <span class="img-text">지금은 신품종 전성시대</span>
+            <span class="img-icon"></span>
           </div>
-          <div class="list-total__sub"">
-            <strong class="list-title">백화점</strong>
-            <ul class="list__mall">
-              <li><a href="#">G마켓</a></li>
-              <li><a href="#">옥션</a></li>
-              <li><a href="#">11번가</a></li>
-              <li><a href="#">인터파크</a></li>
-            </ul>
+        </div>
+        <div class="bottom__carousel_item">
+          <img
+            class="img-box"
+            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
+            alt=""
+          />
+          <div class="text-wrap">
+            <strong class="img-title">지금은 신품종 전성시대</strong>
+            <span class="img-text">지금은 신품종 전성시대</span>
+            <span class="img-icon"></span>
           </div>
-          <div class="list-total__sub"">
-            <strong class="list-title">백화점</strong>
-            <ul class="list__mall">
-              <li><a href="#">G마켓</a></li>
-              <li><a href="#">옥션</a></li>
-              <li><a href="#">11번가</a></li>
-              <li><a href="#">인터파크</a></li>
-            </ul>
+        </div>
+        <div class="bottom__carousel_item">
+          <img
+            class="img-box"
+            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
+            alt=""
+          />
+          <div class="text-wrap">
+            <strong class="img-title">지금은 신품종 전성시대</strong>
+            <span class="img-text">지금은 신품종 전성시대</span>
+            <span class="img-icon"></span>
           </div>
-          <div class="list-total__sub"">
-            <strong class="list-title">백화점</strong>
-            <ul class="list__mall">
-              <li><a href="#">G마켓</a></li>
-              <li><a href="#">옥션</a></li>
-              <li><a href="#">11번가</a></li>
-              <li><a href="#">인터파크</a></li>
-            </ul>
+        </div>
+        <div class="bottom__carousel_item">
+          <img
+            class="img-box"
+            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
+            alt=""
+          />
+          <div class="text-wrap">
+            <strong class="img-title">지금은 신품종 전성시대</strong>
+            <span class="img-text">지금은 신품종 전성시대</span>
+            <span class="img-icon"></span>
           </div>
-          <div class="list-total__sub"">
-            <strong class="list-title">백화점</strong>
-            <ul class="list__mall">
-              <li><a href="#">G마켓</a></li>
-              <li><a href="#">옥션</a></li>
-              <li><a href="#">11번가</a></li>
-              <li><a href="#">인터파크</a></li>
-            </ul>
+        </div>
+        <div class="bottom__carousel_item">
+          <img
+            class="img-box"
+            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
+            alt=""
+          />
+          <div class="text-wrap">
+            <strong class="img-title">지금은 신품종 전성시대</strong>
+            <span class="img-text">지금은 신품종 전성시대</span>
+            <span class="img-icon"></span>
           </div>
+        </div>
+        <div class="bottom__carousel_item">
+          <img
+            class="img-box"
+            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
+            alt=""
+          />
+          <div class="text-wrap">
+            <strong class="img-title">지금은 신품종 전성시대</strong>
+            <span class="img-text">지금은 신품종 전성시대</span>
+            <span class="img-icon"></span>
+          </div>
+        </div>
+        <div class="bottom__carousel_item">
+          <img
+            class="img-box"
+            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
+            alt=""
+          />
+          <div class="text-wrap">
+            <strong class="img-title">지금은 신품종 전성시대</strong>
+            <span class="img-text">지금은 신품종 전성시대</span>
+            <span class="img-icon"></span>
+          </div>
+        </div>
+        <div class="bottom__carousel_item">
+          <img
+            class="img-box"
+            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
+            alt=""
+          />
+          <div class="text-wrap">
+            <strong class="img-title">지금은 신품종 전성시대</strong>
+            <span class="img-text">지금은 신품종 전성시대</span>
+            <span class="img-icon"></span>
+          </div>
+        </div>
+        <div class="bottom__carousel_item">
+          <img
+            class="img-box"
+            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
+            alt=""
+          />
+          <div class="text-wrap">
+            <strong class="img-title">지금은 신품종 전성시대</strong>
+            <span class="img-text">지금은 신품종 전성시대</span>
+            <span class="img-icon"></span>
+          </div>
+        </div>
+        <div class="bottom__carousel_item">
+          <img
+            class="img-box"
+            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
+            alt=""
+          />
+          <div class="text-wrap">
+            <strong class="img-title">지금은 신품종 전성시대</strong>
+            <span class="img-text">지금은 신품종 전성시대</span>
+            <span class="img-icon"></span>
+          </div>
+        </div>
+        <div class="bottom__carousel_item">
+          <img
+            class="img-box"
+            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
+            alt=""
+          />
+          <div class="text-wrap">
+            <strong class="img-title">지금은 신품종 전성시대</strong>
+            <span class="img-text">지금은 신품종 전성시대</span>
+            <span class="img-icon"></span>
+          </div>
+        </div>
+
+        <div class="b_item__carousel-icon">
+          <button class="b_paging-btn" id="b_paging-btn-prev">
+            <span id="prev"></span>
+          </button>
+          <button class="b_paging-btn" id="b_paging-btn-next">
+            <span id="next"></span>
+          </button>
         </div>
       </div>
     </section>
-    <footer><p class="shop-info">
-      (주)카카오커머스는 통신판매중개자로서 통신판매의 당사자가 아니며 상품의 주문, 배송 및 환불 등과 관련한 의무와 책임은 각 판매자에게 있습니다.<br>
-      최종 상품 정보는 구매 전 판매처에서 반드시 확인해주세요.<br>
-      각 판매처의 매매보호 서비스를 통해 구매안전 절차 확인 후(에스크로/소비자피해보험/채무지금보증계약) 상품을 구매해 주시기 바랍니다.
-    </p></footer>
-    <small class="copyright">Copyright © daisycommerce Corp. All rights reserved.</small> -->
 
+    <!-- <footer>
+      <p class="shop-info">
+        (주)카카오커머스는 통신판매중개자로서 통신판매의 당사자가 아니며 상품의
+        주문, 배송 및 환불 등과 관련한 의무와 책임은 각 판매자에게 있습니다.<br />
+        최종 상품 정보는 구매 전 판매처에서 반드시 확인해주세요.<br />
+        각 판매처의 매매보호 서비스를 통해 구매안전 절차 확인
+        후(에스크로/소비자피해보험/채무지금보증계약) 상품을 구매해 주시기
+        바랍니다.
+      </p>
+    </footer> -->
+    <!-- <small class="copyright"
+      >Copyright © daisycommerce Corp. All rights reserved.</small
+    > -->
     <script type="module" src="../public/javascripts/main.js"></script>
   </body>
 </html>
