--- a/public/stylesheets/main-top.scss
+++ b/public/stylesheets/main-top.scss
@@ -1,4 +1,3 @@
-@import "./carousel-first.scss";
 $outline_color: #cecfd1;
 $bg_color: #f3f3f3;
 $img-text_color: rgb(136, 136, 136);
@@ -40,7 +39,7 @@ main {
   width: 485px;
   height: 340px;
   position: relative;
-  overflow: hidden;
+  overflow: hidden; //여기
 
   .item__carousel-wrap {
     position: absolute;
@@ -64,6 +63,9 @@ main {
   margin-top: 10px;
   margin-bottom: 1px;
   font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: -1px;
 }
 .img-text {
   display: block;
@@ -158,4 +160,5 @@ main {
   background-color: bisque;
   text-align: center;
   padding: 30px;
+  letter-spacing: -1px;
 }
