더보기 버튼 현재 숫자 색깔 적용

--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -295,6 +295,10 @@ body {
         }
     }
 
+    .show-imgs-count {
+        color: $primary-color;
+    }
+
 
     .main-theme-category-wrapper {
         margin: 0 $page-side-margin;
