[Refector] refactoring index pages (1)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,24 +93,14 @@
 
                     <div class="content__main__carousel">
                         <div class="slide">
-                            <div
-                                class="item"                                
-                                style="transform: translateX(0%); transition: transform 0.4s;"
-                            >
+                            <% for(let i = 0; i <= 2; i++) { 
+                                let className = `transformX__${i}`;
+                                if (i === 2) className = `transformX__-1`;
+                            %>
+                            <div class='<%= className  %> item'>
                                 <img />
                             </div>
-                            <div
-                                class="item"
-                                style="transform: translateX(100%); transition: transform 0.4s;"
-                            >
-                                <img />
-                            </div>
-                            <div
-                                class="item"
-                                style="transform: translateX(-100%); transition: transform 0.4s;"
-                            >
-                                <img />
-                            </div>
+                            <% } %>
                         </div>
 
                         <div class="paging">
