feat : bottom Carousel 이미지 랜더링 기능 추가

--- a/public/stylesheets/bottom-section.scss
+++ b/public/stylesheets/bottom-section.scss
@@ -51,6 +51,7 @@
 .section-bottom {
   margin: 19px 600px;
   border: #cecfd1 1px solid;
+  background-color: white;
   width: 254px * 5;
   height: 310px;
   //overflow: hidden;
