--- a/views/index.html
+++ b/views/index.html
@@ -96,9 +96,10 @@
     </main>
 
     <div class="carousel__title">지금뜨는 테마 카테고리</div>
+
     <section class="section-bottom">
       <div class="bottom__carousel_wrap">
-        <div class="bottom__carousel_item">
+        <!-- <div class="bottom__carousel_item">
           <img
             class="img-box"
             src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
@@ -241,7 +242,7 @@
             <span class="img-text">지금은 신품종 전성시대</span>
             <span class="img-icon"></span>
           </div>
-        </div>
+        </div> -->
 
         <div class="b_item__carousel-icon">
           <button class="b_paging-btn" id="b_paging-btn-prev">
